# AgriOrbit

./: .gitignore  .npmrc  README.md  glam.ipynb  langgraph.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prepare.js  pyproject.toml  requirements.txt  vercel.json
.archive/: .gitignore  GLAM_API_Python_Tutorial.ipynb  README.md  glam.ipynb  langgraph.json  pyproject.toml  requirements.txt
.archive/instabase/: app.py
.archive/src/: agents.py
agent/src/: agent.py  graph.py
api/: main.py
backend/: package.json  pyproject.toml
backend/app/: main.py  requirements.txt
backend/tests/: test_placeholder.py
client/: .eslintrc.json  README.md  package-lock.json  package.json
client/src/: App.vue  http-common.ts  main.ts
client/src/api/: baseURL.ts  cropmask.ts  datasets.ts
client/src/components/: Map.vue
client/src/components/Chat/: ChatWidget.vue
client/src/stores/: productStore.ts
config/: .env.example
frontend/: .eslintrc.json  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.vue  api.d.ts  http-common.ts  index.css  main.ts  shared.d.ts  vite-env.d.ts
frontend/src/api/: baseURL.ts  cropmask.ts  datasets.ts  point.ts  query.ts  tile.ts
frontend/src/assets/: theme.css
frontend/src/assets/css/: _base.css  _components.css  _primevue.css  _theme-dark.css  _utilities.css  _variables.css
frontend/src/components/: ActionToolbar.vue  ControlPanel.vue  Map.vue  MapView.vue  SelectMenu.vue
frontend/src/components/Chat/: ChatWidget.vue
frontend/src/components/Map/: DeckGL.vue  MapPopup.vue  MapboxView.vue  TileLayer.vue
frontend/src/composables/: useChatContext.ts  useChatService.ts  useChatStreamHandler.ts  useDraggable.ts  useDraggableResizable.ts  useMapViewState.ts  useMessageFormatter.ts  useReactiveMapDataManager.ts  useSystemTheme.ts  useUITheme.ts
frontend/src/stores/: availableDataStore.ts  locationStore.ts  mapStore.ts  pointDataStore.ts  productStore.ts
frontend/src/utils/: defaultSettings.ts
instabase/: test.ipynb
nasa_data_api/: app.py
openglam/: .env.example  .gitignore  index.html  tsconfig.json  vite.config.ts
openglam/src/: App.vue  api.d.ts  shared.d.ts
openglam/src/api/: point.ts  tile.ts
openglam/src/components/: ControlPanel.vue  Map.vue  SelectMenu.vue
openglam/src/components/Chat/: ChatWidget.vue
openglam/src/components/Map/: DeckGL.vue  Mapbox.vue  Popup.vue  TileLayer.vue
openglam/src/stores/: availableDataStore.ts  locationStore.ts  mapStore.ts  productStore.ts
openglam/src/utils/: defaultSettings.ts
services/simplechatendpoint/: main.py
src/: agents.py  main.py
