[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AgriOrbit"
version = "0.1.0"
description = "AgriOrbit's AI agent using LangGraph"
authors = [
    { name = "Michael", email = "heronalps@gmail.com" },
    { name = "Brenan", email = "lundquist.Brenan@gmail.com" },
    { name = "Nathaniel", email = "thenathanielwatkins@gmail.com" },
    { name = "Eric", email = "ericssimpson2021@gmail.com" },
    { name = "Dawson", email = "dawson.whipple@gmail.com" },
    { name = "Logan", email = "loganbugenig01@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["AI", "LangGraph", "agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain-community>=0.3.1",
    "langchain-openai>=0.2.2",
    "langchain>=0.3.2",
    "langgraph-cli>=0.1.52",
    "langgraph>=0.2.34",
    "openai>=1.51.0",
]

[project.urls]
"Homepage" = "https://agriorbit.co"
"Repository" = "https://github.com/Heronalps/AgriOrbit"
